Fix card spacing on home page

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,5 +6,6 @@
 }
 #home-container .mat-card {
   flex-grow: 1;
+  flex-basis: 0;
   margin: 1rem;
 }
